--- a/source/views/realTimeProducts.handlebars
+++ b/source/views/realTimeProducts.handlebars
@@ -1,23 +1,18 @@
 <div>
     <h2>Add Product</h2>
-    <form action="" method="post">
+    <form id="addProductForm">
         <label for="title">Title:</label>
-        <input type="title" placeholder="Title" >
+        <input type="text" placeholder="Title" id="title" >
         <label for="Description">Description:</label>
-        <input type="description" placeholder="Description" >
+        <input type="text" placeholder="Description" id="description" >
         <label for="code">Code:</label>
-        <input type="code" placeholder="Code" >
+        <input type="text" placeholder="Code" id="code" >
         <label for="price">Price:</label>
-        <input type="number" placeholder="Price" >
+        <input type="number" placeholder="Price" id="price" >
         <label for="category">Category:</label>
-        <input type="category" placeholder="Category" >
+        <input type="text" placeholder="Category" id="category" >
 
-        <input type="submit" value="Add Product">
-
-
-
-
-
+        <button type="submit">Add Product</button>
 
     </form>
 
